objects/Agent_Actual_Monthly__c/Agent_Actual_Monthly__c.object-meta.xml
<CustomObject>
    <label>Agent Actual Monthly</label>
    <nameField>
        <displayFormat>AAM-{0000000000}</displayFormat>
        <label>Agent Actual Monthly ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Actual Monthly</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>