objects/Agent_Actual_Monthly__c/fields/Agent_Actual_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Agent_Actual_Yearly__c</fullName>
    <label>Agent Actual Yearly</label>
    <referenceTo>Agent_Actual_Yearly__c</referenceTo>
    <relationshipLabel>Agent Actual Monthly</relationshipLabel>
    <relationshipName>Agent_Actual_Monthly</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>