objects/Agent_Actual_Monthly__c/fields/Closing_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Closing_Interviews__c</fullName>
    <label>Closing Interviews</label>
    <summarizedField>Agent_Actual_Daily__c.Closing_Interviews_Total__c</summarizedField>
    <summaryForeignKey>Agent_Actual_Daily__c.Agent_Actual_Monthly__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>