objects/Agent_Actual_Monthly__c/fields/No_of_New_Leads__c.field-meta.xml
<CustomField>
    <fullName>No_of_New_Leads__c</fullName>
    <label>No. of New Leads</label>
    <summarizedField>Agent_Actual_Daily__c.No_of_New_Leads__c</summarizedField>
    <summaryForeignKey>Agent_Actual_Daily__c.Agent_Actual_Monthly__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>