objects/Agent_Actual_Monthly__c/fields/Record_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Record External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>