objects/Agent_Actual_Monthly__c/fields/Total_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Calls__c</fullName>
    <label>Total Calls</label>
    <summarizedField>Agent_Actual_Daily__c.Total_Calls__c</summarizedField>
    <summaryForeignKey>Agent_Actual_Daily__c.Agent_Actual_Monthly__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>